force-app/main/default/objects/Activity/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <label>Interview Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FET Interview</fullName>
                <label>FET Overview</label>
            </value>
            <value>
                <fullName>IVF Overview</fullName>
            </value>
            <value>
                <fullName>OI Overview</fullName>
            </value>
            <value>
                <fullName>IUI/DI Overview</fullName>
            </value>
            <value>
                <fullName>Egg Donor Overview</fullName>
            </value>
            <value>
                <fullName>Sperm Donor Overview</fullName>
            </value>
            <value>
                <fullName>Recipient Overview</fullName>
            </value>
            <value>
                <fullName>Fertility Preservation Overview</fullName>
            </value>
            <value>
                <fullName>Account Overview</fullName>
            </value>
            <value>
                <fullName>Collection of Medications</fullName>
            </value>
            <value>
                <fullName>PRP Preparations</fullName>
            </value>
            <value>
                <fullName>PRP Insemination</fullName>
            </value>
            <value>
                <fullName>Filgrastim</fullName>
            </value>
            <value>
                <fullName>Medication Overview</fullName>
            </value>
            <value>
                <fullName>Ovarian PRP Preparations</fullName>
            </value>
            <value>
                <fullName>Ovarian PRP Insemination</fullName>
            </value>
            <value>
                <fullName>Medication Teach</fullName>
                <isActive>false</isActive>
                <label>Medication Teach</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>